kubernetes/external/onlyoffice/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice-external-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - onlyoffice.bbg.pe
      secretName: onlyoffice-bbg-pe-tls
  rules:
    - host: onlyoffice.bbg.pe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onlyoffice-external-svc
                port:
                  number: 80
